--- a/src/components/EvolutionBlock.astro
+++ b/src/components/EvolutionBlock.astro
@@ -1,17 +1,20 @@
 ---
 import type { Evolution } from "../types/types";
 import Bulbasaur from "../assets/images/pokemon/0001Bulbasaur.webp";
+import { setRoute } from "../utils";
 
 interface Props {
   evolutions: Evolution[];
 }
+
+const pokemonURL = setRoute("#");
 ---
 
 <div class="evolution-block">
   <div class="container">
     <h2>Evolution Chain</h2>
     <div class="evolutions">
-      <a href="#" class="evolution-item">
+      <a href={pokemonURL} class="evolution-item">
         <p class="evolution-type">Stage 1</p>
 
         <div class="image">
@@ -24,7 +27,7 @@ interface Props {
         </div>
       </a>
 
-      <a href="#" class="evolution-item">
+      <a href={pokemonURL} class="evolution-item">
         <p class="evolution-type">Stage 2</p>
 
         <div class="image">
@@ -37,7 +40,7 @@ interface Props {
         </div>
       </a>
 
-      <a href="#" class="evolution-item">
+      <a href={pokemonURL} class="evolution-item">
         <p class="evolution-type">Stage 3</p>
 
         <div class="image">
