--- a/src/components/PokemonDataBlock.astro
+++ b/src/components/PokemonDataBlock.astro
@@ -1,11 +1,14 @@
 ---
 import PokemonCounterWidget from "./PokemonCounterWidget.astro";
 import ArrowRight from "../assets/icons/arrow-right-solid.svg?raw";
+import { setRoute } from "../utils/index";
+
 interface Props {
   title: string;
 }
 
 const { title } = Astro.props;
+const pokedexURL = setRoute("/pokedex");
 ---
 
 <div class="pokemon-data-block">
@@ -22,7 +25,7 @@ const { title } = Astro.props;
           amount={905}
         />
         <div class="link-to-pokedex">
-          <a class="button" href="/pokedex">
+          <a class="button" href={pokedexURL}>
             Open pokedex <Fragment set:html={ArrowRight} />
           </a>
         </div>
