--- a/src/components/NewsList.astro
+++ b/src/components/NewsList.astro
@@ -5,7 +5,7 @@ import { setRoute } from "../utils";
 
 const newsText = `Team Rocket, the perennial troublemakers of the Pokémon universe, are once again blasting off into the horizon. With their classic motto and unwavering determination, Jessie, James, and Meowth are up to their mischievous antics, soaring into the sky, ensuring that they're never grounded for too long.`;
 const items = [1, 2, 3, 4, 5, 6];
-const newsItemURL = setRoute("news/team-rocket");
+const newsItemURL = setRoute("/news/team-rocket");
 ---
 
 <div class="news-list">
