--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -19,6 +19,7 @@ const { href, text } = Astro.props;
 
 <style scoped lang="scss">
   .button {
+    display: inline-block;
     border: none;
     outline: none;
     padding: 1.25rem 3rem;
