--- a/src/components/NewsItem.astro
+++ b/src/components/NewsItem.astro
@@ -1,22 +1,24 @@
 ---
 import Button from "./Button.astro";
+import { toDateString } from "../utils/index";
 
 interface Props {
   title: string;
-  publicationDate: string;
+  date: string;
   description: string;
-  image: ImageMetadata;
+  image: string;
   imageAltText: string;
   href: string;
 }
 
-const { title, publicationDate, description, image, imageAltText, href } =
-  Astro.props;
+const { title, date, description, image, imageAltText, href } = Astro.props;
+
+const publicationDate = toDateString(date);
 ---
 
 <div class="news-item">
   <div class="news-item-image">
-    <img src={image.src} alt={imageAltText} />
+    <img src={image} alt={imageAltText} />
   </div>
   <div class="news-content-snippet">
     <h3 class="news-title margin-bottom-0">{title}</h3>
