make news page dynamic

--- a/src/components/NewsItem.astro
+++ b/src/components/NewsItem.astro
@@ -58,6 +58,7 @@ const publicationDate = toDateString(date);
     .news-title {
       margin-top: 1rem;
       margin-bottom: 1rem;
+      max-width: 650px;
     }
 
     .news-item-image {
