--- a/src/components/LinkCard.astro
+++ b/src/components/LinkCard.astro
@@ -1,20 +1,21 @@
 ---
+import { toDateString } from "../utils/index";
 interface Props {
   title: string;
-  publicationDate: string;
+  date: string;
   description: string;
-  image: ImageMetadata;
+  image: string;
   imageAltText: string;
   href: string;
 }
 
-const { title, publicationDate, description, image, imageAltText, href } =
-  Astro.props;
+const { title, date, description, image, imageAltText, href } = Astro.props;
+const publicationDate = toDateString(date);
 ---
 
 <a href={href} class="link-card">
   <div class="link-card-image">
-    <img src={image.src} alt={imageAltText} />
+    <img src={image} alt={imageAltText} />
   </div>
   <div class="link-card-content">
     <h3 class="link-card-title margin-bottom-0">{title}</h3>
@@ -41,11 +42,18 @@ const { title, publicationDate, description, image, imageAltText, href } =
     .link-card-content {
       align-self: flex-start;
       margin-left: 3.5%;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
     }
 
     .link-card-title {
       margin-top: 1rem;
       margin-bottom: 1rem;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 3;
+      overflow: hidden;
     }
 
     .link-card-item-image {
@@ -58,6 +66,10 @@ const { title, publicationDate, description, image, imageAltText, href } =
     .description {
       font-size: 16px;
       margin-bottom: 3rem;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 5;
+      overflow: hidden;
     }
 
     .datetime {
