--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,96 +1,15 @@
 ---
-import { Stack, debugLog, setRoute } from "../utils";
 import Default from "../layouts/Default.astro";
-import SimpleTextBlock from "../components/SimpleTextBlock.astro";
-import ZebraStripe from "../components/ZebraStripe.astro";
-import Slider from "../components/Slider.astro";
-import SliderItem from "../components/SliderItem.astro";
-import PokemonDataBlock from "../components/PokemonDataBlock.astro";
-import PokemonInfoBlock from "../components/PokemonInfoBlock.astro";
-import Enamorus from "../assets/images/pokemon/0905Enamorus2.png";
-import NewsItem from "../components/NewsItem.astro";
-import newsImage from "../assets/images/team-rocket-blasting-off.jpg";
+import PageContent from "../components/PageContent.astro";
 import Navigation from "../components/Navigation.astro";
-import LatestNewsBlock from "../components/LatestNewsBlock.astro";
 import getHomePageData from "../mappers/pages/Home";
 
 const pageData = await getHomePageData();
-
-const newsText = `Team Rocket, the perennial troublemakers of the Pokémon universe, are once again blasting off into the horizon. With their classic motto and unwavering determination, Jessie, James, and Meowth are up to their mischievous antics, soaring into the sky, ensuring that they're never grounded for too long.`;
-const description = `Enarmorus, when it flies to this land from across the sea, the bitter winter comes to an end. According to legend, this Pokémon’s love gives rise to the budding of fresh life across Hisui.`;
-const newsItemURL = setRoute("/news/team-rocket");
 ---
 
 <Default headTitle={pageData.siteTitle}>
   <main>
     <Navigation />
-
-    {
-      pageData.pageContent.map((contentBlock) => {
-        const key = Object.keys(contentBlock)[0];
-        if (key === "simple_text_block") {
-          return (
-            <ZebraStripe>
-              <SimpleTextBlock
-                title={contentBlock[key].title}
-                text={contentBlock[key].introduction}
-              />
-            </ZebraStripe>
-          );
-        }
-
-        if (key === "latest_news") {
-          const newsArticles = contentBlock[key].news_articles;
-
-          return (
-            <ZebraStripe isDark={true}>
-              <LatestNewsBlock title={contentBlock[key].title}>
-                <Slider>
-                  {newsArticles.map((article) => {
-                    return (
-                      <SliderItem>
-                        <NewsItem
-                          title={article.title}
-                          date={article.created_at}
-                          description={article.introduction}
-                          image={article.image.url}
-                          imageAltText="image alt text"
-                          href={article.url}
-                        />
-                      </SliderItem>
-                    );
-                  })}
-                </Slider>
-              </LatestNewsBlock>
-            </ZebraStripe>
-          );
-        }
-
-        if (key === "pokemon_data_block") {
-          const pokemonData = contentBlock[key].pokemon[0];
-          const pokemonTypes = pokemonData.types.map((type) => type.title);
-          return (
-            <ZebraStripe>
-              <PokemonDataBlock title={contentBlock[key].title}>
-                <PokemonInfoBlock
-                  title={contentBlock[key].pokemon_info_title}
-                  number={pokemonData.pokemon_number}
-                  description={contentBlock[key].description}
-                  name={pokemonData.title}
-                  imageUrl={pokemonData.image.url}
-                  pokemonTypes={pokemonTypes}
-                  backgroundColor={pokemonData.background_color}
-                />
-              </PokemonDataBlock>
-            </ZebraStripe>
-          );
-        }
-      })
-    }
+    <PageContent pageContent={pageData.pageContent} />
   </main>
 </Default>
-
-<script define:vars={{ pageData }}>
-  console.log(pageData);
-  console.log(pageData.pageContent[1].latest_news.news_articles[0]);
-</script>
